@@ -28,7 +28,7 @@ CONFIG_RTAI_MAINT_AUTOTOOLS=y
 # Machine (x86)
 #
 CONFIG_RTAI_HW_FPU=y
-CONFIG_RTAI_HW_CPUS="2"
+CONFIG_RTAI_HW_NRCPUS="2"
 CONFIG_RTAI_HW_8254_LATENCY="4700"
 CONFIG_RTAI_HW_APIC_LATENCY="3944"
 
