@@ -217,11 +217,6 @@ dnl Some sanity checks again. We are only rearranging defaults and
 dnl discarding preposterous settings here, previous user selection
 dnl is kept as long as it is sane.
 
-if test x$CONFIG_SMP = x; then
-    CONFIG_RTAI_HW_NRCPUS=1
-else
-    CONFIG_RTAI_HW_NRCPUS=2
-fi
 if test "$CONFIG_X86" = y; then
    if test x$CONFIG_X86_CMPXCHG = x; then
       AC_MSG_ERROR([RTAI won't work on legacy i386 platforms (cmpxchg() is missing, need >= CONFIG_M486)])
@@ -403,6 +398,13 @@ AC_ARG_ENABLE(cpus,
  changequote([,])dnl
 	*) AC_MSG_ERROR([Bad argument to option: --enable-cpus=<number-of-CPUs>]) ;;
 	esac])
+if test x$CONFIG_RTAI_HW_NRCPUS = x; then
+    if test x$CONFIG_SMP = x; then
+        CONFIG_RTAI_HW_NRCPUS=1
+    else
+        CONFIG_RTAI_HW_NRCPUS=CONFIG_NR_CPUS
+    fi
+fi
 AC_MSG_RESULT(${CONFIG_RTAI_HW_NRCPUS:-1})
 
 AC_MSG_CHECKING(for FPU support)
